--- a/Task4/taskS4.html
+++ b/Task4/taskS4.html
@@ -16,22 +16,26 @@
             <a>Register with us to get more details</a>
         </div>
         <form action="">
-                <label for="name" style="font-size: 20px;">Name</label>
+                <label for="name">Name <br>
+                    <i class="fas fa-user" style="color: #c4c6c9;font-size: 15px;"></i>
+                </label>
                 <div class="name">
-                <input type="text" id="First" name="Fname" >
-                <input type="text" id="last" name="Lname">
+                <input type="text" id="name" name="Fname" >
+                <input type="text" id="name" name="Lname">
                 </div>
 
-                <label for="email" style="font-size: 20px;">Email</label>
+                <label for="email" >Email<br>
+                    <i class="fas fa-envelope" style="color: #c4c6c9;font-size: 15px;"></i> 
+                </label>
                 <div class="name">
-                    <i class="fas fa-envelope" style="color: #777a7e;font-size: 15px;"></i> 
                 <input type="email" id="email" name="email">
                 </div>
 
-                <label for="phone" style="font-size: 20px;">Phone</label>
+                <label for="phone">Phone
+                   <br> <i class="fas fa-phone" style="color: #c4c6c9;font-size: 15px;"></i>
+                </label>
                 <div class="name"style="margin-bottom: 20px;">
-                    <i class="fas fa-phone" style="color: #777a7e;font-size: 15px;"></i> 
-                <input type="password" id="password" name="password" >
+                <input type="password" id="phone" name="password" >
                 </div>
 
                 <label for="Topic" style="font-size: 20px;">Topic</label>
